Fixed the animation distortionsin exp4 simualtion

--- a/src/lab/exp4/simulation/mfs_expt4.css
+++ b/src/lab/exp4/simulation/mfs_expt4.css
@@ -142,7 +142,6 @@ h3{
     height:93%;
     left:42%; 
     top: -2%;  
-    cursor:pointer;
     -ms-transform: rotate(-27deg); /* IE 9 */
     -webkit-transform: rotate(-27deg); /* Chrome, Safari, Opera */
     transform: rotate(-27deg);
@@ -155,7 +154,6 @@ h3{
     left:65%;
     height: 22.5%;
     width: 3.3%;
-    cursor:pointer;
 }
 
 #cuvette{
@@ -165,7 +163,6 @@ h3{
     left:71%;
     height: 22.5%;
     width: 3.3%;
-    cursor:pointer;
 }
 
 #table_with_spec{
@@ -188,7 +185,6 @@ h3{
     height: 26%; 
     left: 49%;
     top: 10%; 
-    cursor: pointer;
 }
 
 #spectrolid_trans_button{
@@ -198,7 +194,6 @@ h3{
     height: 18%;
     left: 35%; 
     top: 20%;  
-    cursor: pointer;
 }
 
 #spectrolid_trans_button1{
@@ -208,7 +203,6 @@ h3{
     height: 18%;
     left: 36%; 
     top: 4%;  
-    cursor: pointer;
 }
 
 #reference{
@@ -217,7 +211,6 @@ h3{
     width: 15%;
     left: 54%;
     top: -14%;
-    cursor: pointer;
     visibility: hidden;
 }
 
@@ -226,7 +219,6 @@ h3{
     z-index: 1;
     left: 583px;
     top: -6%;
-    cursor: pointer;
 }
 
 #power_trans_button{
@@ -236,7 +228,6 @@ h3{
     top: 44%;
     width: 1.8%;
     height: 7.5%;
-    cursor: pointer; 
 }
 
 #demo{
@@ -305,7 +296,6 @@ h3{
     width: 3%;
     height: 5%;
     visibility : hidden;
-    cursor: pointer;
 }
 
 #input1{
@@ -355,7 +345,6 @@ h3{
     width: 8%;
     left: 81%;
     top: 555px;
-    cursor: pointer;
     height: 4%;
 }
 
@@ -379,7 +368,6 @@ h3{
     width: 9%;
     height: 5%;
     visibility : hidden;
-    cursor: pointer;
 }
 #select{
     position: absolute;
